src/Hamburger.css
.hamburger-menu{
    display: flex; 
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
}

.hamburger-icon {
   display: flex; 
    justify-content: center;
    text-align: center;
}

.hamburger-links {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.hamburger-overlay{
    top: 0;
    left: 0;
    position: absolute;
    height: 100vh;
    width: 100%;

}

